@@ -14,9 +14,12 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.95 $ $Date: 2008-11-12 22:16:37 $ $Author: christian $
+# @version $Revision: 1.96 $ $Date: 2008-11-13 21:42:30 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2008-11-13  Christian Heller  <christian.heller@tuxtax.de>
+        * Debug integer_converter.c, compound_accessor.c
 
 2008-11-12  Christian Heller  <christian.heller@tuxtax.de>
         * Debug xml conversion, compound_accessor.c, integer_vector_converter.c
